<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="titulo">Titulo</string>
    <string name="valor_padrao">R$0.00</string>
    <string name="adicionar">Adicionar</string>
    <string name="ganhos">Ganhos</string>
    <string name="nenhum_item_adicionado">Nenhum item adicionado</string>
    <string name="item">Item</string>
    <string name="gastos">Gastos</string>
    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>